std_pfeil: replace with oak_iron_0

--- a/mod/utc/goblinschtze.utc.yml
+++ b/mod/utc/goblinschtze.utc.yml
@@ -36,7 +36,7 @@ Equip_ItemList:
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: nw_aarcl001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: nw_wbwsh001}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: std_pfeil}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: arrow_oak_iron}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 65536, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
