--- a/mod/utc/goblinspinnenrei.utc.yml
+++ b/mod/utc/goblinspinnenrei.utc.yml
@@ -35,7 +35,7 @@ Equip_ItemList:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: nw_wbwsh001}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: std_pfeil}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: arrow_oak_iron}}
 FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
@@ -60,7 +60,7 @@ ItemList:
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ItemList
     __struct_id: 0
-    InventoryRes: {type: :resref, value: std_pfeil}
+    InventoryRes: {type: :resref, value: arrow_oak_iron}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
 LastName: 
