--- a/mod/utc/hobgoblinschtze.utc.yml
+++ b/mod/utc/hobgoblinschtze.utc.yml
@@ -31,7 +31,7 @@ Equip_ItemList:
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: nw_aarcl002}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: nw_wbwln001}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: std_pfeil}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: arrow_oak_iron}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 65536, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
@@ -63,7 +63,7 @@ ItemList:
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ItemList
     __struct_id: 0
-    InventoryRes: {type: :resref, value: std_pfeil}
+    InventoryRes: {type: :resref, value: arrow_oak_iron}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
 LastName: 
