Gabel Perok: sell bone wand + blank scroll

--- a/mod/utm/st_gabel_perok.utm.yml
+++ b/mod/utm/st_gabel_perok.utm.yml
@@ -630,6 +630,13 @@ StoreList:
         InventoryRes: {type: :resref, value: s_pantomtrap}
         Repos_PosX: {type: :word, value: 5}
         Repos_Posy: {type: :word, value: 8}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: UTM/StoreList/ItemList
+        __struct_id: 86
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: x2_it_cfm_bscrl}
+        Repos_PosX: {type: :word, value: 6}
+        Repos_Posy: {type: :word, value: 8}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTM/StoreList
     __struct_id: 3
@@ -677,6 +684,13 @@ StoreList:
         Infinite: {type: :byte, value: 1}
         InventoryRes: {type: :resref, value: wmgwn013}
         Repos_PosX: {type: :word, value: 5}
+        Repos_Posy: {type: :word, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: UTM/StoreList/ItemList
+        __struct_id: 6
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: x2_it_cfm_wand}
+        Repos_PosX: {type: :word, value: 6}
         Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTM/StoreList
