--- a/mod/area/gabelstr_west_04.git.yml
+++ b/mod/area/gabelstr_west_04.git.yml
@@ -3264,6 +3264,79 @@ Placeable List:
     X: {type: :float, value: 53.0574}
     Y: {type: :float, value: 60.3702}
     Z: {type: :float, value: 10.01}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: GIT/Placeable List
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 241}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 2.5525}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: Schmaler Kletterpfad
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: us_leiter}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
+    PortraitId: {type: :word, value: 801}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: SchmalerKletterpfad}
+    TemplateResRef: {type: :resref, value: spuren_007}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: GIT/Placeable List/VarTable
+        __struct_id: 0
+        Name: {type: :cexostr, value: ziel}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: WP_castletimra0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 14.6575}
+    Y: {type: :float, value: 94.0687}
+    Z: {type: :float, value: 10.01}
 SoundList: 
   type: :list
   value: 
@@ -4712,3 +4785,30 @@ WaypointList:
     YOrientation: {type: :float, value: 0.0}
     YPosition: {type: :float, value: 60.5031}
     ZPosition: {type: :float, value: 10.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: GIT/WaypointList
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14817
+      value: 
+        0: Waypoint
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 1}
+    Tag: {type: :cexostr, value: WP_castletimra0exit}
+    TemplateResRef: {type: :resref, value: nw_waypoint001}
+    XOrientation: {type: :float, value: -0.7071}
+    XPosition: {type: :float, value: 14.0102}
+    YOrientation: {type: :float, value: -0.7071}
+    YPosition: {type: :float, value: 93.1957}
+    ZPosition: {type: :float, value: 10.01}
