--- a/mod/area/castletimra.are.yml
+++ b/mod/area/castletimra.are.yml
@@ -13,7 +13,7 @@ Expansion_List:
 
 Flags: {type: :dword, value: 1}
 FogClipDist: {type: :float, value: 100.0}
-Height: {type: :int, value: 4}
+Height: {type: :int, value: 6}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 1}
 LightingScheme: {type: :byte, value: 14}
@@ -54,6 +54,110 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 1}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 1}
+    Tile_MainLight1: {type: :byte, value: 5}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 85}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 85}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 1}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 37}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 85}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 85}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: ARE/Tile_List
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 27}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 13}
@@ -63,16 +167,16 @@ Tile_List:
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 0}
-    Tile_AnimLoop2: {type: :byte, value: 0}
-    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 41}
+    Tile_ID: {type: :int, value: 40}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 0}
-    Tile_SrcLight1: {type: :byte, value: 0}
-    Tile_SrcLight2: {type: :byte, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
