Gemischtwarenhaendler: verkaufe Werkzeughammer

--- a/mod/utm/st_gemischt2.utm.yml
+++ b/mod/utm/st_gemischt2.utm.yml
@@ -151,6 +151,13 @@ StoreList:
         InventoryRes: {type: :resref, value: woodaxe001}
         Repos_PosX: {type: :word, value: 5}
         Repos_Posy: {type: :word, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: UTM/StoreList/ItemList
+        __struct_id: 4
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: hammer}
+        Repos_PosX: {type: :word, value: 6}
+        Repos_Posy: {type: :word, value: 0}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTM/StoreList, __struct_id: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTM/StoreList
