Gabel Exot: verkaufe Langbogen

--- a/mod/utm/st_gabel_exotic.utm.yml
+++ b/mod/utm/st_gabel_exotic.utm.yml
@@ -153,6 +153,13 @@ StoreList:
         InventoryRes: {type: :resref, value: wurfpfeil}
         Repos_PosX: {type: :word, value: 5}
         Repos_Posy: {type: :word, value: 5}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: UTM/StoreList/ItemList
+        __struct_id: 18
+        Infinite: {type: :byte, value: 1}
+        InventoryRes: {type: :resref, value: langbogen002}
+        Repos_PosX: {type: :word, value: 4}
+        Repos_Posy: {type: :word, value: 6}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTM/StoreList, __struct_id: 2}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTM/StoreList, __struct_id: 3}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTM/StoreList, __struct_id: 1}
