Arnwald kleine Hoehle: add lockable door transition

--- a/mod/area/area031.git.yml
+++ b/mod/area/area031.git.yml
@@ -40,14 +40,14 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: Arnwald37toArnwald14}
-    LinkedToFlags: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: WP_Arnwald37toArnwald14}
+    LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -100,7 +100,7 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
         Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: hirsch002}
@@ -108,7 +108,7 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
         Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: hirsch001}
@@ -192,14 +192,14 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch001}
         SingleSpawn: {type: :byte, value: 0}
@@ -281,14 +281,14 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch001}
         SingleSpawn: {type: :byte, value: 0}
@@ -370,14 +370,14 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch001}
         SingleSpawn: {type: :byte, value: 0}
@@ -459,14 +459,14 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/Encounter List/CreatureList
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
         ResRef: {type: :resref, value: hirsch001}
         SingleSpawn: {type: :byte, value: 0}
