--- a/mod/area/gabel_nagumo_1.are.yml
+++ b/mod/area/gabel_nagumo_1.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Jun Nagumos Juwelierswerkstatt
+    0: An der Gabel - Juwelierswerkstatt
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
@@ -145,10 +145,10 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 295}
-    Tile_MainLight1: {type: :byte, value: 4}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 100}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 3}
     Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -184,9 +184,9 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 99}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 3}
     Tile_SrcLight2: {type: :byte, value: 3}
@@ -223,12 +223,12 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 193}
-    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_ID: {type: :int, value: 201}
+    Tile_MainLight1: {type: :byte, value: 4}
     Tile_MainLight2: {type: :byte, value: 14}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 0}
-    Tile_SrcLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
@@ -262,12 +262,12 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 13}
-    Tile_Orientation: {type: :int, value: 3}
-    Tile_SrcLight1: {type: :byte, value: 2}
-    Tile_SrcLight2: {type: :byte, value: 2}
+    Tile_ID: {type: :int, value: 34}
+    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
@@ -275,12 +275,12 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 135}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
@@ -340,12 +340,12 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
-    Tile_MainLight1: {type: :byte, value: 30}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 3}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
+    Tile_ID: {type: :int, value: 135}
+    Tile_MainLight1: {type: :byte, value: 4}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: ARE/Tile_List
     __struct_id: 1
@@ -353,10 +353,10 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 134}
     Tile_MainLight1: {type: :byte, value: 4}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 3}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 3}
     Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
