--- a/mod/area/adak_tower.are.yml
+++ b/mod/area/adak_tower.are.yml
@@ -43,7 +43,7 @@ SunDiffuseColor: {type: :dword, value: 5606655}
 SunFogAmount: {type: :byte, value: 5}
 SunFogColor: {type: :dword, value: 16777215}
 SunShadows: {type: :byte, value: 1}
-Tag: {type: :cexostr, value: adak_1ug}
+Tag: {type: :cexostr, value: adak_tower}
 Tile_List: 
   type: :list
   value: 
